--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
+    <meta property="og:image" content="https://d1m75rqqgidzqn.cloudfront.net/wp-data/2020/08/17160042/shutterstock_577183882.jpg" />
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Material Science And Engineering</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='steve.css'>
-    <link rel="icon" href="../img.icons8.com/color-glass/96/000000/mac-os.png">
-    <script src='main.html'></script>
 </head>
 
 <body>
